History/v0.5/README.md
# 原神风物之诗琴模拟器
***Windsong-Lyre-Simulator by Mimangz*** *迷茫子的梦想启航项目！边做边学！*

#### 使用说明：
加载完成后点击**小派蒙**进入演奏界面。
如果网络不稳定导致加载时间过长，我允许你**强行进入**，但是不推荐这样做！
可使用鼠标或者键盘演奏。键盘键位与原神键位一致，另支持数字键和小键盘。

#### 更新计划：
[0.5.1]将加载进度条样式修改为七元素
[0.6]增加关于信息、帮助以及其他的子界面
[1.0]增加自动演奏、自定义编曲功能
[1.1]增加曲目库功能
[1.5]增加账号系统，允许存储、分享曲目
[2.0]增加游戏模式

#### 更新日志：

**--20220701--**
[0.1]项目创建，实现基本功能(鼠标演奏)，发布第一版本(0.1)
[0.1.1]优化代码与文件结构，使用document.write方法创建按钮

**--20220702--**
[0.2]增加键盘操作，键位与原神游戏内一致
[0.3]增加按键动画，美化界面，发布早期开发版本(0.3)

**--20220704--**
[0.3.1]优化CSS，使得按键圆在没有按键按下时不显示
[0.3.2]优化CSS，使得按键贴图丢失时也不会排版混乱
[0.3.3]优化CSS，使得在正常情况下按键圆不会溢出屏幕
[0.3.4]修改背景为填充而不是平铺以美化界面
[0.3.5]修复了未松开按键时会重复播放音符的bug
[0.3.6]为按键区域增加不可选中属性，避免意外选中
[0.3.7]将onclick事件修改为onmousedown，提升使用体验
[0.3.8]优化按键和按键圆的动画关键帧，美化显示效果
[0.3.9]为演奏区域添加背景五线谱，更贴近原版
[0.3.10]添加启动界面，资源加载完成后才可进入主体，优化使用体验
[0.3.11]为启动界面增加了一只可爱的SVG派蒙
[0.3.12]按照Edge浏览器的控制台给出的警告，修复了一些严谨问题

**--20220705--**
[0.3.13]解决资源加载的一些异常，优化整体逻辑
[0.3.14]增加加载时间过长的提示，避免尴尬卡死
[0.3.15]增加允许在部分资源无法加载的情况下强行进入主体的功能
[0.4]修复一些小bug，进一步完善程序，发布稳定版本(0.4)
[0.4.1]优化资源加载界面等待机制以及部分提示文本
[0.4.2]优化在移动端设备上的显示以及操作
[0.4.3]作者是迷茫子！这是个没有意义的版本更新(？)
[0.4.4]守望时空33指导前的最后一次版本更新，接下来需要大改

**--20220706--**
[0.5]**代码逻辑与结构大优化。**具体包含以下内容：
1.将更新日志与计划从代码注释中移出，创建单独的README文件
2.将css和js从html中分离出来，便于模块化管理
3.规范化代码：在css中统一使用小写命名类名
4.规范化代码：在js中创建变量统一使用let而不是var
5.规范化代码：将script标签移动至body的末端
6.规范化代码：在js中统一采用单引号表示字符串
7.代码优化：通过innerHtml追加的方式实现按键和按键圆显示
8.代码优化：修改css逻辑，按键/按键圆和五线谱共用一个类
9.代码优化：修改按键/按键圆的偏移，使得极端缩放下不会越出可视区域
10.为网页添加了一个小图标

**总之做自己喜欢的事情就好，别管别人的！**