History/v1.0/README.md
# 原神风物之诗琴模拟器
***Windsong-Lyre-Simulator by Mimangz*** *迷茫子的梦想启航项目！边做边学！*

## 使用说明：

加载完成后点击**小派蒙**进入演奏界面。

如果网络不稳定导致加载时间过长，我允许你**强行进入**，但是不推荐这样做！

可使用鼠标或者键盘演奏。键盘键位与原神游戏内键位一致，另支持数字键和小键盘。

## 更新计划：

【1.1】优化一些我心仪的小细节

【2.0】增加曲目库功能

【3.0】增加账号系统，允许存储、分享曲目

【4.0】增加游戏模式

(不要脸地拉长版本号，因为我感觉后面会越来越难，一下子做不出来orz)

## 更新日志：

### --20220701--

【0.1】项目创建，实现基本功能(鼠标演奏)，发布第一版本(0.1)

【0.1.1】优化代码与文件结构，使用document.write方法创建按钮

### --20220702--

【0.2】增加键盘操作，键位与原神游戏内一致

【0.3】增加按键动画，美化界面，发布早期开发版本(0.3)

### --20220704--

【0.3.1】优化CSS，使得按键圆在没有按键按下时不显示

【0.3.2】优化CSS，使得按键贴图丢失时也不会排版混乱

【0.3.3】优化CSS，使得在正常情况下按键圆不会溢出屏幕

【0.3.4】修改背景为填充而不是平铺以美化界面

【0.3.5】修复了未松开按键时会重复播放音符的bug

【0.3.6】为按键区域增加不可选中属性，避免意外选中

【0.3.7】将onclick事件修改为onmousedown，提升使用体验

【0.3.8】优化按键和按键圆的动画关键帧，美化显示效果

【0.3.9】为演奏区域添加背景五线谱，更贴近原版

【0.3.10】添加启动界面，资源加载完成后才可进入主体，优化使用体验

【0.3.11】为启动界面增加了一只可爱的SVG派蒙

【0.3.12】按照Edge浏览器的控制台给出的警告，修复了一些严谨问题

### --20220705--

【0.3.13】解决资源加载的一些异常，优化整体逻辑

【0.3.14】增加加载时间过长的提示，避免尴尬卡死

【0.3.15】增加允许在部分资源无法加载的情况下强行进入主体的功能

【0.4】修复一些小bug，进一步完善程序，发布稳定版本(0.4)

【0.4.1】优化资源加载界面等待机制以及部分提示文本

【0.4.2】优化在移动端设备上的显示以及操作

【0.4.3】作者是迷茫子！这是个没有意义的版本更新(？)

【0.4.4】守望时空33指导前的最后一次版本更新，接下来需要大改

### --20220706--

【0.5】**代码逻辑与结构大优化。 具体包含以下内容：**

1.将更新日志与计划从代码注释中移出，创建单独的README文件

2.将css和js从html中分离出来，便于模块化管理

3.规范化代码：在css中统一使用小写命名类名

4.规范化代码：在js中创建变量统一使用let而不是var

5.规范化代码：将script标签移动至body的末端

6.规范化代码：在js中统一采用单引号表示字符串

7.代码优化：通过innerHtml追加的方式实现按键和按键圆显示

8.代码优化：修改css逻辑，按键/按键圆和五线谱共用一个类

9.代码优化：修改按键/按键圆的偏移，使得极端缩放下不会越出可视区域

10.为网页添加了一个小图标

### --20220709--

【0.6】**添加菜单界面、关于信息窗口，修复细节问题。具体包含以下内容：**

1.在主界面上方增加了菜单栏，包含三个按钮：编曲模式、游戏模式和关于

2.添加关于信息，按下【关于…】即可显示

3.优化加载界面的逻辑，当加载完成后不再进行进度的刷新

4.优化加载界面的逻辑，当加载完成并进入主界面后删除加载界面

5.添加按Esc关闭各类信息窗口的功能

6.添加编曲模式和游戏模式的未实装提示

7.优化样式：在打开任意信息窗口时背景变暗

8.优化逻辑：当有信息窗口打开时，键盘演奏被屏蔽

9.优化代码：弃用keyCode，改用Code，实现更好的兼容性

10.为body添加touch-action属性，降低移动端使用延迟

### --20220712--

【0.7】**主要为1.0版本的编曲模式做准备。具体包含以下内容：**

1.制作编曲模式窗口的UI，预留基本功能组件

2.为编曲模式添加帮助说明，确定编曲读取逻辑

3.优化部分CSS样式细节，微调参数

### --20220715--

【1.0】**实装编曲模式！具体包含以下内容：**

1.编写编曲模式的核心逻辑，支持三种编曲方式：按键、简谱和混沌

2.为播放编曲逻辑中的setInterval添加一个全局的标识，避免意外叠加重复

3.优化编曲模式的帮助说明，使之更易于理解

4.添加按P打开编曲界面的功能，优化使用体验

5.优化README.md文件的内容(强迫症行为)

5.今天是我去搞前端工程师面试的日子，结果不咋样，还得继续努力

6.更多细节问题将在1.1版本中优化，今天不早了先到这里

------

**总之做自己喜欢的事情就好，别管别人怎么说！**
